feat(HO-T-13, hadith, upd): Add multi-lang support user updating.
In transaction, we made the upd hadith information. Info has update in this:
- story (title)
- versions (origin, ..., translates)
- comment(..., translates)

Changed hadith.yaml openapi implement with more logically handlers.
